pkg/safeguards/constraints/PodDisruptionBudgets/constraint/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureV1DisallowedBadPodDisruptionBudgets
metadata:
  name: v1-disallowed-bad-pod-disruption-budgets
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "ReplicaSet", "StatefulSet"]
      - apiGroups: ["policy"]
        kinds: ["PodDisruptionBudget"]
